_sass/my-style.scss
.dl-table {
  a {
    @supports ((text-decoration-thickness: initial) and (text-underline-offset: initial)) {
      text-underline-offset: .8rem;
    }
    @supports not ((text-decoration-thickness: initial) and (text-underline-offset: initial)) {
      padding-bottom: .45rem;
    }
  }

  .btn, .gumroad-button  {
    margin: 1rem 0;
  }
}


// Suffix links with icons depending on the link. Don't do it for sidebar elements, which have class "no-mark-external" exactly for this purpose.
//
// Can be done in two ways:
//  - Using CSS's "background" property for the a-tag (like http://xahlee.info/js/css_add_icon_to_link.html);
//  - Using CSS's "content" property for the ::after tag (like Hydejack does by default);
// For the icons, you can either:
//  - Use a font that has them (Hydejack's default, using the icomoon font);
//  - Pull them from the CDNs of big companies;
//  - Upload them yourself;
a[href*="twitter.com/"]:not(.no-mark-external):not(.no-mark)::after {
    content: "\00a0\f099";
    color: #26a7de;

    font-family: "FontAwesome" !important;
    font-weight: normal;

    padding-right: 2px;
}

a[href*="facebook.com/"]:not(.no-mark-external):not(.no-mark)::after {
    content: "\00a0\f082" !important;
    color: #1877F2 !important;

    font-family: "FontAwesome" !important;
    font-weight: normal;

    padding-right: 2px;
}

a[href*="youtube.com/"]:not(.no-mark-external):not(.no-mark)::after {
    content: "\00a0\f16a" !important;
    color: red !important;

    font-family: "FontAwesome" !important;
    font-weight: normal;

    padding-right: 2px;
}

a[href*="wikipedia.org/"]:not(.no-mark-external):not(.no-mark)::after {
    content: "\00a0\f266" !important;
    color: darkblue !important;

    font-family: "FontAwesome" !important;
    font-weight: normal;

    padding-right: 2px;
}

// Folder tree for nested ul's, surrounded by a div. 
// Used to be based on https://codepen.io/sazzad/pen/gEEKQb
// But now based on    https://codepen.io/asraven/pen/qbrQMX
.foldertree {    
  ul {
    margin-left: 10px;
    padding-left: 20px;
    border-left: 1px solid #ddd;
  }
  
  li {
    list-style: none;
    color: #888;
    font-size: 17px;
    font-weight: normal;
  }
    
  li.folder::before {
    font-family: FontAwesome;
    content: "\f07b";
    padding-right: 3px;  
  }
}

